# running-coach

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.ko.md  README.md  docker-compose.yml  garmin_coach.py  inspect_plans.py  patch_all_garth.py  patch_garth.py  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: commit-msg
db/init/: 001_core_schema.sql
docs/: COACHING_ALGORITHM.ko.md  COACHING_ALGORITHM.md  COACHING_ARCHITECTURE.ko.md  COACHING_ARCHITECTURE.md  LONG_TERM_PRODUCTIZATION_PLAN.md  LONG_TERM_REFACTORING_STRATEGY.md  MOBILE_APP_HANDOFF.md  PROVIDER_DATA_MODEL.md  REFACTORING_PROGRESS.md  SCHEDULER_ARCHITECTURE.md
scripts/: setup_garmin.py  validate_commit_message.py
src/coach_gemini/: __init__.py  __main__.py  exceptions.py
src/coach_gemini/clients/garmin/: __init__.py  client.py  context_collector.py  health_collector.py  performance_collector.py  utils.py  workout_manager.py
src/coach_gemini/clients/gemini/: __init__.py  client.py  planner.py
src/coach_gemini/clients/google_calendar/: __init__.py  client.py  sync.py
src/coach_gemini/config/: __init__.py  constants.py  settings.py
src/coach_gemini/core/: __init__.py  container.py  orchestrator.py  scheduler.py
src/coach_gemini/models/: config.py  context.py  health.py  metrics.py  performance.py  training.py
src/coach_gemini/utils/: __init__.py  logger.py  retry.py  time_utils.py
src/running_coach/: __init__.py  __main__.py  exceptions.py
src/running_coach/api/: __init__.py  admin.py  app.py  users.py
src/running_coach/application/: __init__.py  coaching_service.py  user_service.py  user_worker.py
src/running_coach/clients/: __init__.py  llm.py  providers.py
src/running_coach/clients/garmin/: __init__.py  client.py  context_collector.py  health_collector.py  performance_collector.py  utils.py  workout_manager.py
src/running_coach/clients/gemini/: __init__.py  client.py  planner.py  response_parser.py
src/running_coach/clients/google_calendar/: __init__.py  client.py  sync.py
src/running_coach/coaching/: __init__.py  context.py  prompt.py
src/running_coach/coaching/planners/: __init__.py  base.py  description_renderer.py  legacy.py  llm_driven.py  step_templates.py
src/running_coach/coaching/safety/: __init__.py  metrics.py  rules.py  validator.py
src/running_coach/config/: __init__.py  constants.py  settings.py
src/running_coach/core/: __init__.py  bootstrap.py  container.py  orchestrator.py  pace_zones.py  runtime_factory.py  scheduler.py
src/running_coach/models/: __init__.py  config.py  context.py  feedback.py  health.py  llm_settings.py  metrics.py  performance.py  training.py  user.py  user_coaching.py
src/running_coach/storage/: __init__.py  admin_settings.py  athlete_scoped_store.py  database.py  history_read_service.py  history_service.py  history_sync_service.py  history_write_service.py  integration_credentials.py  plan_freshness_service.py  scheduled_user_jobs.py  schema.py  user_coaching_state_service.py  user_profile_history_service.py  user_scoped_store.py  user_service.py
src/running_coach/utils/: __init__.py  logger.py  retry.py  time_utils.py
tests/unit/api/: test_admin_api.py  test_app.py  test_user_api.py
tests/unit/application/: test_user_application_service.py  test_user_worker.py
tests/unit/clients/: test_calendar_sync.py  test_context_collector.py  test_garmin_activity_history.py  test_garmin_schedule_history.py  test_google_calendar_client.py  test_llm_provider.py  test_planner.py  test_response_parser.py  test_workout_manager.py
tests/unit/coaching/: test_context_builder.py  test_prompt_render.py
tests/unit/coaching/planners/: test_description_renderer.py  test_llm_driven_integration.py  test_llm_driven_planner.py  test_planner_dispatch.py  test_step_templates.py
tests/unit/coaching/safety/: conftest.py  test_rule_acwr_cap.py  (+9 more)
tests/unit/core/: test_orchestrator.py  test_pace_zones.py  test_runtime_factory.py  test_schedule_settings.py  test_scheduler_service.py  test_training_models.py
tests/unit/storage/: test_admin_settings.py  test_backfill_history_service.py  test_calendar_history_service.py  test_history_service.py  test_integration_credentials.py  test_scheduled_user_jobs.py  test_schema.py  test_user_service.py
